--- a/src/screens/LoginScreen.html
+++ b/src/screens/LoginScreen.html
@@ -2,76 +2,50 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Brivax Laudos - Login</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Brivax Laudos – Login</title>
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(135deg, #f4f4f4, #eaeaea);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
+    body{
+      font-family:'Segoe UI',sans-serif;
+      background:linear-gradient(135deg,#f4f4f4,#eaeaea);
+      display:flex;align-items:center;justify-content:center;
+      height:100vh;margin:0;padding:20px;
     }
-    .login-box {
-      background: #fff;
-      padding: 28px;
-      border-radius: 12px;
-      box-shadow: 0 6px 12px rgba(0,0,0,0.15);
-      width: 340px;
-      text-align: center;
+    .login-box{
+      background:#fff;padding:28px;border-radius:12px;
+      box-shadow:0 6px 12px rgba(0,0,0,0.15);
+      width:100%;max-width:360px;text-align:center;
     }
-    h2 {
-      color: #ff6600;
-      margin-bottom: 18px;
+    img{width:110px;margin-bottom:10px;}
+    h2{color:#ff6600;margin-bottom:18px;}
+    input{
+      width:90%;padding:10px;margin:8px 0;
+      border:1px solid #ccc;border-radius:6px;font-size:14px;
     }
-    input, button {
-      width: 90%;
-      padding: 10px;
-      margin: 8px 0;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      font-size: 14px;
+    button{
+      background:#ff6600;border:none;color:#fff;
+      padding:12px;border-radius:8px;cursor:pointer;
+      width:95%;margin-top:12px;transition:0.3s;font-size:16px;
     }
-    button {
-      background: #ff6600;
-      color: white;
-      border: none;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-    button:hover {
-      background: #e65c00;
-    }
-    .remember {
-      display: flex;
-      align-items: center;
-      justify-content: start;
-      width: 90%;
-      margin: 5px auto 0;
-      font-size: 13px;
-    }
-    .remember input {
-      width: auto;
-      margin-right: 6px;
-    }
+    button:hover{background:#e65c00;}
+    label{font-size:14px;display:flex;align-items:center;justify-content:center;gap:6px;}
+    a{display:block;margin-top:15px;color:#555;text-decoration:none;font-size:14px;}
+    a:hover{color:#ff6600;}
   </style>
 </head>
 <body>
   <div class="login-box">
-    <img src="../../assets/brivax-logo.png" alt="Brivax Logo" style="width:100px;margin-bottom:10px;">
+    <img src="/Laudo-Brivax/assets/brivax-logo.png" alt="Brivax Logo">
     <h2>Login</h2>
-    <input type="text" id="username" placeholder="Usuário">
-    <input type="password" id="password" placeholder="Senha">
-    <div class="remember">
-      <input type="checkbox" id="rememberMe">
-      <label for="rememberMe">Lembrar de mim</label>
-    </div>
+
+    <input id="username" placeholder="Usuário">
+    <input id="password" type="password" placeholder="Senha">
+
+    <label><input type="checkbox" id="rememberMe"> Lembrar-me</label>
     <button onclick="login()">Entrar</button>
-    <a href="CadastroScreen.html">Não tem conta? Cadastre-se</a>
+    <a href="./CadastroScreen.html">Ainda não tem conta? Cadastre-se</a>
   </div>
+
   <script src="../js/login.js"></script>
 </body>
 </html>
