--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <link rel="manifest" href="/Laudo-Brivax/manifest.json">
+<meta name="theme-color" content="#ff6600">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Brivax Laudos – Início</title>
   <link rel="stylesheet" href="./src/css/style.css">
@@ -34,5 +36,13 @@
     <button onclick="window.location.href='./src/screens/LoginScreen.html'">Login</button>
     <button onclick="window.location.href='./src/screens/CadastroScreen.html'">Cadastre-se</button>
   </div>
+  <script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/Laudo-Brivax/service-worker.js')
+      .then(() => console.log('✅ Service Worker registrado'))
+      .catch(err => console.log('⚠️ Erro ao registrar Service Worker:', err));
+  }
+</script>
 </body>
 </html>
+
