--- a/src/screens/FireSystemChecklist.html
+++ b/src/screens/FireSystemChecklist.html
@@ -7,10 +7,13 @@
   <style>
     body {
       font-family: 'Segoe UI', Arial, sans-serif;
-      background-color: #f4f4f4;
+      background: linear-gradient(135deg, #f4f4f4, #eaeaea);
       color: #333;
       margin: 0;
       padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
     header {
       background-color: #ff7b00;
@@ -20,14 +23,15 @@
       font-weight: bold;
       font-size: 20px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+      width: 100%;
     }
     .container {
       padding: 15px;
-      max-width: 900px;
-      margin: 0 auto;
+      width: 100%;
+      max-width: 480px;
     }
     .item {
-      background-color: #cfcfcf;
+      background-color: #fff;
       border-radius: 10px;
       padding: 15px;
       margin-bottom: 12px;
@@ -36,19 +40,25 @@
     .item h3 {
       margin-top: 0;
       color: #ff7b00;
-      font-size: 17px;
+      font-size: 16px;
+    }
+    input[type="file"] {
+      width: 100%;
     }
     .uploads input {
       display: block;
       margin: 5px 0;
+      width: 100%;
     }
     label {
       font-weight: bold;
     }
     .options {
       display: flex;
-      gap: 10px;
+      justify-content: space-around;
       margin: 8px 0;
+      flex-wrap: wrap;
+      gap: 6px;
     }
     .options button {
       background-color: #ddd;
@@ -57,6 +67,8 @@
       border-radius: 5px;
       cursor: pointer;
       transition: all 0.2s;
+      flex: 1;
+      min-width: 70px;
     }
     .options button.selected {
       background-color: #ff7b00;
@@ -70,35 +82,38 @@
       resize: none;
       min-height: 40px;
     }
-    .signature-btn {
+    .signature-btn, .generate {
       background-color: #ff7b00;
       color: white;
       border: none;
-      padding: 10px;
+      padding: 12px;
       width: 100%;
       font-size: 16px;
       border-radius: 6px;
       margin-top: 10px;
       cursor: pointer;
+      transition: background 0.3s;
+    }
+    .signature-btn:hover, .generate:hover {
+      background-color: #e96f00;
     }
     .signature-modal {
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
       background: rgba(0,0,0,0.7);
       display: none;
       justify-content: center;
       align-items: center;
+      z-index: 1000;
     }
     .signature-box {
       background: white;
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.4);
-      width: 95%;
-      max-width: 400px;
+      width: 90%;
+      max-width: 360px;
     }
     canvas {
       width: 100%;
@@ -109,28 +124,24 @@
     .footer {
       text-align: center;
       padding: 20px;
+      width: 100%;
+      max-width: 480px;
     }
     .footer input {
       margin: 6px 0;
-      padding: 6px;
-      width: 90%;
+      padding: 8px;
+      width: 100%;
       border-radius: 5px;
       border: 1px solid #ccc;
-    }
-    .generate {
-      background-color: #ff7b00;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      font-size: 18px;
-      border-radius: 8px;
-      cursor: pointer;
+      box-sizing: border-box;
     }
   </style>
 </head>
 <body>
   <header>🔥 Laudo de Sistema de Incêndio - Brivax</header>
+
   <div class="container" id="checklist">
+    <!-- ITENS DO LAUDO -->
     <div class="item"><h3>0. Foto da Fachada da Loja</h3><input type="file" multiple /></div>
     <div class="item"><h3>1. Foto geral da cozinha</h3><input type="file" multiple /></div>
     <div class="item"><h3>2. Foto da coifa</h3><input type="file" multiple /></div>
