--- a/src/screens/SmokeSystemChecklist.html
+++ b/src/screens/SmokeSystemChecklist.html
@@ -7,9 +7,13 @@
   <style>
     body {
       font-family: 'Segoe UI', Arial, sans-serif;
-      background-color: #f4f4f4;
+      background: linear-gradient(135deg, #f4f4f4, #eaeaea);
       color: #333;
       margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
     header {
       background-color: #ff7b00;
@@ -19,11 +23,12 @@
       font-weight: bold;
       font-size: 20px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+      width: 100%;
     }
     .container {
       padding: 15px;
-      max-width: 900px;
-      margin: 0 auto;
+      width: 100%;
+      max-width: 480px;
     }
     .info-box {
       background-color: #fff;
@@ -43,9 +48,10 @@
       margin-bottom: 8px;
       border: 1px solid #ccc;
       border-radius: 5px;
+      box-sizing: border-box;
     }
     .item {
-      background-color: #cfcfcf;
+      background-color: #fff;
       border-radius: 10px;
       padding: 15px;
       margin-bottom: 12px;
@@ -54,16 +60,22 @@
     .item h3 {
       margin-top: 0;
       color: #ff7b00;
-      font-size: 17px;
+      font-size: 16px;
+    }
+    input[type="file"] {
+      width: 100%;
     }
     .uploads input {
       display: block;
       margin: 5px 0;
+      width: 100%;
     }
     .options {
       display: flex;
-      gap: 10px;
+      justify-content: space-around;
       margin: 8px 0;
+      flex-wrap: wrap;
+      gap: 6px;
     }
     .options button {
       background-color: #ddd;
@@ -72,6 +84,8 @@
       border-radius: 5px;
       cursor: pointer;
       transition: all 0.2s;
+      flex: 1;
+      min-width: 70px;
     }
     .options button.selected {
       background-color: #ff7b00;
@@ -85,35 +99,38 @@
       resize: none;
       min-height: 40px;
     }
-    .signature-btn {
+    .signature-btn, .generate {
       background-color: #ff7b00;
       color: white;
       border: none;
-      padding: 10px;
+      padding: 12px;
       width: 100%;
       font-size: 16px;
       border-radius: 6px;
       margin-top: 10px;
       cursor: pointer;
+      transition: background 0.3s;
+    }
+    .signature-btn:hover, .generate:hover {
+      background-color: #e96f00;
     }
     .signature-modal {
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
       background: rgba(0,0,0,0.7);
       display: none;
       justify-content: center;
       align-items: center;
+      z-index: 1000;
     }
     .signature-box {
       background: white;
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.4);
-      width: 95%;
-      max-width: 400px;
+      width: 90%;
+      max-width: 360px;
     }
     canvas {
       width: 100%;
@@ -124,29 +141,23 @@
     .footer {
       text-align: center;
       padding: 20px;
+      width: 100%;
+      max-width: 480px;
     }
     .footer input {
       margin: 6px 0;
-      padding: 6px;
-      width: 90%;
+      padding: 8px;
+      width: 100%;
       border-radius: 5px;
       border: 1px solid #ccc;
-    }
-    .generate {
-      background-color: #ff7b00;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      font-size: 18px;
-      border-radius: 8px;
-      cursor: pointer;
+      box-sizing: border-box;
     }
   </style>
 </head>
 <body>
   <header>💨 Laudo de Sistema de Detecção de Fumaça - Brivax</header>
-  <div class="container">
 
+  <div class="container">
     <!-- 🔶 Informações Gerais -->
     <div class="info-box">
       <label for="data">Data do Laudo:</label>
@@ -162,57 +173,13 @@
     <!-- 🔶 Itens do Laudo -->
     <div class="item"><h3>0. Foto da Fachada da Loja</h3><input type="file" multiple /></div>
     <div class="item"><h3>1. Foto geral do teto do ambiente</h3><input type="file" multiple /></div>
+
     <div class="item">
-  <h3>2. Detectores Instalados</h3>
-  <div id="detectorContainer"></div>
-  <button onclick="addDetector()">+ Adicionar Detector</button>
-</div>
-
-<script>
-let detectorCount = 0;
-const maxDetectores = 100;
-
-function addDetector() {
-  if (detectorCount >= maxDetectores) {
-    alert("Limite máximo de 100 detectores atingido!");
-    return;
-  }
-  detectorCount++;
-
-  const container = document.getElementById("detectorContainer");
-
-  const block = document.createElement("div");
-  block.classList.add("detector-block");
-  block.style.background = "#fff";
-  block.style.padding = "12px";
-  block.style.borderRadius = "8px";
-  block.style.margin = "10px 0";
-  block.style.boxShadow = "0 2px 6px rgba(0,0,0,0.1)";
-  block.innerHTML = `
-    <h4>Detector ${detectorCount}</h4>
-    <label>Foto 1:</label><input type="file" accept="image/*">
-    <label>Foto 2:</label><input type="file" accept="image/*">
-    <label>Foto 3:</label><input type="file" accept="image/*">
-    <div class="options">
-      <label>Teste:</label>
-      <button onclick="selectOption(this)">Sim</button>
-      <button onclick="selectOption(this)">Não</button>
+      <h3>2. Detectores Instalados</h3>
+      <div id="detectorContainer"></div>
+      <button class="signature-btn" style="background:#ddd;color:#000" onclick="addDetector()">+ Adicionar Detector</button>
     </div>
-    <div class="options">
-      <label>Funcionando:</label>
-      <button onclick="selectOption(this)">Sim</button>
-      <button onclick="selectOption(this)">Não</button>
-    </div>
-  `;
-  container.appendChild(block);
-}
 
-function selectOption(btn) {
-  const group = btn.parentNode.querySelectorAll('button');
-  group.forEach(b => b.classList.remove('selected'));
-  btn.classList.add('selected');
-}
-</script>
     <div class="item"><h3>3. Foto da central de detecção</h3><input type="file" multiple /></div>
     <div class="item"><h3>4. Teste dos detectores</h3>
       <div class="options"><label>Teste:</label><button>Sim</button><button>Não</button></div>
@@ -268,7 +235,7 @@ function selectOption(btn) {
   </div>
 
   <script>
-    // Botões de sim/não
+    // ✅ Responsividade e seleção de opções
     document.querySelectorAll('.options button').forEach(btn => {
       btn.addEventListener('click', () => {
         const group = btn.parentNode.querySelectorAll('button');
@@ -277,7 +244,48 @@ function selectOption(btn) {
       });
     });
 
-    // Assinaturas flutuantes
+    // ✅ Função para adicionar detectores dinamicamente
+    let detectorCount = 0;
+    const maxDetectores = 100;
+    function addDetector() {
+      if (detectorCount >= maxDetectores) {
+        alert("Limite máximo de 100 detectores atingido!");
+        return;
+      }
+      detectorCount++;
+      const container = document.getElementById("detectorContainer");
+      const block = document.createElement("div");
+      block.classList.add("detector-block");
+      block.style.background = "#fff";
+      block.style.padding = "12px";
+      block.style.borderRadius = "8px";
+      block.style.margin = "10px 0";
+      block.style.boxShadow = "0 2px 6px rgba(0,0,0,0.1)";
+      block.innerHTML = `
+        <h4>Detector ${detectorCount}</h4>
+        <label>Foto 1:</label><input type="file" accept="image/*">
+        <label>Foto 2:</label><input type="file" accept="image/*">
+        <label>Foto 3:</label><input type="file" accept="image/*">
+        <div class="options">
+          <label>Teste:</label>
+          <button onclick="selectOption(this)">Sim</button>
+          <button onclick="selectOption(this)">Não</button>
+        </div>
+        <div class="options">
+          <label>Funcionando:</label>
+          <button onclick="selectOption(this)">Sim</button>
+          <button onclick="selectOption(this)">Não</button>
+        </div>`;
+      container.appendChild(block);
+    }
+
+    function selectOption(btn) {
+      const group = btn.parentNode.querySelectorAll('button');
+      group.forEach(b => b.classList.remove('selected'));
+      btn.classList.add('selected');
+    }
+
+    // ✅ Modal de Assinatura
     const modal = document.getElementById('signatureModal');
     const canvas = document.getElementById('signaturePad');
     const ctx = canvas.getContext('2d');
