Fix HTML encoding issues in SmokeSystemChecklist

--- a/src/screens/SmokeSystemChecklist.html
+++ b/src/screens/SmokeSystemChecklist.html
@@ -308,5 +308,12 @@
     function saveSignature(){ alert("Assinatura salva para "+activeField); modal.style.display='none'; }
     function closeSignature(){ modal.style.display='none'; }
   </script>
+  <!-- Biblioteca PDF-LIB -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf-lib/1.17.1/pdf-lib.min.js"></script>
+
+<!-- Scripts Brivax -->
+<script src="../js/pdf-template.js"></script>
+<script src="../js/SmokeSystemReport.js"></script>
 </body>
 </html>
+
